<resources>
    <string name="app_name">买卖宝</string>
    <string name="fish_app">再按一次返回键退出程序</string>
    <string name="loading">加载中...</string>
    <string name="operate_time_out">超时,请稍后再试</string>

    <!-- 首页 -->
    <string name="home">首页</string>

    <!-- 求购 -->
    <string name="to_buy">求购</string>
    <string name="buy_myself">我要求购</string>
    <string name="product">商品</string>
    <string name="number">数量</string>
    <string name="size">规格/型号/其他</string>
    <string name="contacts">联系人</string>
    <string name="phone_number">手机号码</string>
    <string name="email">邮箱</string>
    <string name="buy_product_or_model">所需商品的名称</string>
    <string name="buy_need_number">您需要的数量</string>
    <string name="buy_choose_write">请填写规格/型号/其他</string>
    <string name="buy_write_name">请填写姓名</string>
    <string name="buy_phone">常用手机号</string>
    <string name="buy_email">常用接收邮箱</string>
    <string name="more_need_buy">有其他需求 请在此说明</string>
    <string name="publish_order">发布求购</string>

    <!-- 分类 -->
    <string name="classfy">分类</string>

    <!-- 进货单 -->
    <string name="purchase_order">进货单</string>

    <!-- 个人中心 -->
    <string name="personal_center">个人中心</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="payment">待付款</string>
    <string name="delivery">待发货</string>
    <string name="received">已收货</string>
    <string name="complete">已完成</string>
    <string name="all_order">全部订单</string>
    <string name="my_spells">我的拼单</string>
    <string name="my_buy">我的求购</string>
    <string name="footprint">浏览记录</string>
    <string name="follow">我的关注</string>
    <string name="consultation">我的客服</string>
    <string name="help">我的咨询</string>
    <string name="about_us">关于我们</string>

    <!--登录-->
    <string name="verify_login">验证码登录</string>
    <string name="user_login">普通登录</string>
    <string name="phone_login">手机号：</string>
    <string name="phone_hint_login">请输入手机号</string>
    <string name="verification_login">验证码：</string>
    <string name="verify_hint_login">请输入验证码</string>
    <string name="get_code_login">获取验证码</string>
    <string name="user_name">用户名：</string>
    <string name="user_name_hint_login">请输入用户名/手机号</string>
    <string name="psd_user_login">密    码：</string>
    <string name="psd_hint_user_login">请输入密码</string>
    <string name="forget_psd">忘记密码</string>
    <string name="third_party_accounts">使用第三方账号登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_qq">QQ登录</string>

    <!--IM-->
    <string name="text_fahuo">你们多久可以发货?</string>
    <string name="text_weight">这个我应该穿什么号的？我身高165，体重46kg</string>
    <string name="text_color">还有其他颜色的吗?</string>
    <string name="text_kuaidi">你们发的是什么快递?</string>

    <string name="tip_request_fail">请求失败</string>
    <string name="tip_wating">请稍等...</string>
    <string name="nick_service">客服昵称</string>
    <string name="tip_eval">请对我的服务做出评价</string>
    <string name="hint_leave_message">留言</string>
    <string name="tip_btn_sumbit">提交</string>
</resources>
