<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.login.fragment.FragmentPhone">

    <LinearLayout
        android:id="@+id/ll_verificationLogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phoneNumber"
            style="@style/tv_phone_user_login"
            android:text="@string/phone_login" />

        <com.mmbao.saas.utils.custom.ClearEditText
            android:id="@+id/login_verificationPhone"
            style="@style/tv_phone_user_hint_login"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/phone_hint_login"
            android:inputType="phone"
            android:maxLength="11" />

    </LinearLayout>

    <View style="@style/view_buy"/>

    <LinearLayout
        android:id="@+id/ll_verificationCode"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_verification"
            style="@style/tv_phone_user_login"
            android:text="@string/verification_login" />

        <EditText
            android:id="@+id/et_verificationCode"
            style="@style/tv_phone_user_hint_login"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.8"
            android:background="@color/white"
            android:hint="@string/verify_hint_login"
            android:inputType="number"
            android:maxLength="6" />
        <View style="@style/view_login"/>
        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="8dp"
            android:text="@string/get_code_login"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

    <View style="@style/view_buy"/>

</LinearLayout>
