<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_accountLogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_account"
            style="@style/tv_phone_user_login"
            android:text="@string/user_name" />

        <com.mmbao.saas.utils.custom.ClearEditText
            android:id="@+id/login_username"
            style="@style/tv_phone_user_hint_login"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/user_name_hint_login" />
    </LinearLayout>

    <View style="@style/view_buy"/>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            style="@style/tv_phone_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psd_user_login" />

        <EditText
            android:id="@+id/login_password"
            style="@style/tv_phone_user_hint_login"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/psd_hint_user_login"
            android:inputType="textPassword" />
        <LinearLayout
            android:id="@+id/login_psw_show_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:id="@+id/login_psw_show_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/psw_hide"/>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/view_buy"/>
</LinearLayout>